--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 authors = ["石博文 <sbw@sbw.so>"]
 
 [dependencies]
-hyper = "*"
-hyper-native-tls = "*"
-rustc-serialize = "*"
+reqwest = "*"
+serde_json = "*"
 time = "*"
 clap = "*"
